--- a/.github/workflows/Disposable.yml
+++ b/.github/workflows/Disposable.yml
@@ -1,8 +1,8 @@
-name: 'Create Zip Archive'
+name: 'Create Release'
 on:
-  release:
-    branches:
-      - main
+  push:
+    tags:
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,5 +16,6 @@ jobs:
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
+        name: 'Disposable Theme v2 Series'
         artifacts: "DisposableTheme.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
